# SortingAlgorithms

./: CMakeLists.txt  Sorting Algorithms.docx
include/: sorters.h
src/: main.cpp  sorters.cpp
